added to index.html

--- a/index.html
+++ b/index.html
@@ -13,5 +13,32 @@
     <p class="hello">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi quasi magni incidunt! Modi quaerat rerum quas beatae ad, voluptates, nobis sit voluptate fugit ea maxime quae iure est quam doloremque.</p>
     <p id="hello">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta nesciunt sed voluptate quo consectetur praesentium ratione possimus est magni atque eligendi veritatis numquam ex eum ab, cumque deleniti sapiente ducimus.</p>
     <blockquote class="hello">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut explicabo quibusdam odio vel fugit omnis sequi esse nihil asperiores officiis reiciendis aliquid nesciunt molestiae consequatur nulla nam, illo cum dolores?</blockquote>
+    <p class="yellow">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores enim <em>harum</em> ea quam optio maxime nihil eveniet aspernatur voluptas, in veniam id aperiam placeat nobis esse debitis minus illo nostrum.</p>
+  <p>Velit exercitationem ex iste ullam! Pariatur est eos consequatur obcaecati <strong>laboriosam</strong> error? Molestiae magnam voluptates at voluptas voluptatibus, consectetur exercitationem corporis repudiandae necessitatibus, quod nostrum recusandae accusamus dicta fuga cumque.</p>
+  <p class="red-background yellow">Iste doloribus sapiente quas enim vero. Eos itaque incidunt hic aliquid quasi id quae assumenda quia aperiam omnis totam, veritatis neque enim. Delectus ipsum esse minus maxime rerum eaque ad.</p>
+  <p class="red-background">Id ipsam, neque asperiores reiciendis quo tempora exercitationem nostrum molestiae, <strong>architecto</strong> ipsum tempore dicta amet? Minus esse modi libero et minima assumenda. Temporibus, hic fuga. Quos sunt autem libero quasi.</p>
+  <p id="example">Voluptatibus quisquam aliquam suscipit corporis excepturi nostrum enim dolor modi. Totam ducimus obcaecati molestias omnis fuga iusto. Molestias <em>obcaecati</em> perferendis libero, non, doloremque nam, beatae eveniet sit quisquam deleniti recusandae.</p>
+  <p class="yellow">Repellendus qui quam, at expedita accusantium ducimus impedit voluptate consequatur rem dolorum corrupti? Ipsum, ipsa doloremque? Repellendus fugiat, eos quae natus tempore reiciendis unde praesentium odio nam quod quam! Sit.</p>
+
+<hr>
+<h2 class="example" id="example">Lorem, ipsum dolor.</h2>
+
+<aside class="example1" id="example1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur deleniti dolorum, exercitationem doloremque commodi, aspernatur totam animi fugiat magnam quam, mollitia provident architecto ipsa eveniet necessitatibus voluptatibus dignissimos recusandae dolore.</aside>
+<q class="example0" id="example0">Lorem ipsum dolor sit amet consectetur adipisicing elit. A aliquam non debitis, praesentium optio pariatur molestiae exercitationem, dolor provident quae aut repellat vitae, nemo dolorum ipsum incidunt quis veniam excepturi!</q>
+<ol class="example2" id="example2">
+    <li>red</li>
+    <li>green</li>
+    <li>yellow</li>
+    <li>pink</li>
+</ol>
+
+<ul class="example3" id="example3">
+    <li>green</li>
+    <li>yellow</li>
+    <li>red</li>
+</ul>
+
+
+
 </body>
 </html>
